--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+
 name: Build
 on:
   push:
@@ -35,6 +36,7 @@ jobs:
           alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
+            openssl base64 -in your_keystore.keystore
         env:
           BUILD_TOOLS_VERSION: "34.0.0"
       - name: Upload artifacts
